test/test_examples/syntactic_examples/syntax_error/error_statement_24.zig
// Syntax error: empty expression in assignment

const ifj = @import("ifj24.zig"); 

pub fn main() void {
    var x = 42;
    x = ;
}